@@ -279,7 +279,6 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_constants.html#events >constants.events </a> - These constants define the various event types<br>
 <a href=ref/pygame_constants.html#keyboard >constants.keyboard </a> - These constants represent the keys on the keyboard.<br>
 <a href=ref/pygame_constants.html#modifiers >constants.modifiers </a> - These constants represent the modifier keys on the keyboard.<br>
-<a href=ref/pygame_constants.html#zdepracated >constants.zdepracated </a> - The following constants are made available, but generally not needed<br>
 <a href=ref/pygame_cursor.html#compile>cursor.compile</a> - compile cursor strings into cursor data<br>
 <a href=ref/pygame_cursors.html#load_xbm>cursors.load_xbm</a> - reads a pair of XBM files into set_cursor arguments<br>
 <a href=ref/pygame_display.html#Info>display.Info</a> - get display capabilities and settings<br>
@@ -336,6 +335,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_font.html#init>font.init</a> - initialize the display module<br>
 <a href=ref/pygame_font.html#match_font>font.match_font</a> -        find the filename for the named system font<br>
 <a href=ref/pygame_font.html#quit>font.quit</a> - uninitialize the font module<br>
+<a href=ref/pygame_image.html#frombuffer>image.frombuffer</a> - create a surface from a python memory buffer<br>
 <a href=ref/pygame_image.html#fromstring>image.fromstring</a> - create a surface from a raw string buffer<br>
 <a href=ref/pygame_image.html#get_extended>image.get_extended</a> - returns true if SDL_image formats are available<br>
 <a href=ref/pygame_image.html#load>image.load</a> - load an image to a new Surface<br>
