@@ -79,10 +79,6 @@ These constants represent the keys on the keyboard.</td></tr>
 These constants represent the modifier keys on the keyboard.</td></tr>
 
 
-<tr><td><a href=#zdepracated >zdepracated </a></td><td> -
-The following constants are made available, but generally not needed</td></tr>
-
-
 </table>
 
 <hr>
@@ -281,22 +277,6 @@ keyboard button states, and you can temporarily set their states.
 KMOD_NONE, KMOD_LSHIFT, KMOD_RSHIFT, KMOD_SHIFT, KMOD_CAPS,<br>
 KMOD_LCTRL, KMOD_RCTRL, KMOD_CTRL, KMOD_LALT, KMOD_RALT,<br>
 KMOD_ALT, KMOD_LMETA, KMOD_RMETA, KMOD_META, KMOD_NUM, KMOD_MODE<br>
-</ul><br>&nbsp;<br>
-
-<a name=zdepracated ><font size=+2><b>zdepracated 
-</b></font><br><font size=+1><tt>
-pygame.constants.zdepracated (constants)
-</tt></font><ul>
-The flags labeled as readonly should never be used,
-except when comparing checking flags against <a href=Surface.html#get_flags>Surface.get_flags()</a>.
-<br>&nbsp;<br>
-SWSURFACE - not really usable as a surface flag, equates to 0 and
-is always default<br>
-ANYFORMAT - creates a display with in best possible bit depth<br>
-HWACCEL - surface is hardware accelerated, readonly<br>
-SRCCOLORKEY- surface has a colorkey for blits, readonly<br>
-SRCALPHA - surface has alpha enabled, readonly<br>
-RLEACCELOK - surface is rle accelrated but uncompiled, readonly
 </ul><br>&nbsp;<br>
 
 
